--- a/bulkup/Info.plist
+++ b/bulkup/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ZIPLINE_URL</key>
+	<string>$(ZIPLINE_URL)</string>
+	<key>ZIPLINE_TOKEN</key>
+	<string>$(ZIPLINE_TOKEN)</string>
 	<key>API_BASE_URL</key>
 	<string>$(API_BASE_URL)</string>
 	<key>ENVINROMENT</key>
