Refactor and optimize views for improved performance and readability
- Removed unnecessary state management in ExerciseCardView and TrainingHubView.
- Updated navigation titles and display modes in DietView and TrainingHubView.
- Changed state objects to observed objects in various views for better data flow.
- Enhanced RMTrackerView with caching and loading indicators.
- Improved UserProfileView layout and structure for better user experience.
- Updated StoreKit product ID for subscription management.

--- a/bulkup.xcodeproj/xcshareddata/xcschemes/bulkup-Dev.xcscheme
+++ b/bulkup.xcodeproj/xcshareddata/xcschemes/bulkup-Dev.xcscheme
@@ -50,6 +50,9 @@
             ReferencedContainer = "container:bulkup.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../bulkup/bulkup-products.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
